Bugfixes for alignments, toolbar, darkmode text help texts

--- a/styles/base/_admin-item.scss
+++ b/styles/base/_admin-item.scss
@@ -42,6 +42,7 @@
 
   &__description {
     font-size: 0.875rem;
+    color: var(--colorGinTextLight);
   }
 
   & &__link {
