--- a/styles/components/toolbar.scss
+++ b/styles/components/toolbar.scss
@@ -15,7 +15,6 @@ body.gin--classic-toolbar {
 
     @include mq($breakpointXSmall) {
       .user-menu {
-        order: 99;
         flex-grow: 1;
         flex-shrink: 0;
         text-align: right;
